[7] Made small fixes in returning codes in swagger and handlers
